- Правка gtsfunction2.
- excel-calc-button.
- Удаление дочерних если они есть при копировании copy_many.
- td actions параметры.
- Глюк кеша.
- Фильтр calc.
- Загрузить переименовать в Фильтр-список.
- Исправлен импорт excel файла.
- get-autocomplect-content get-table-autosave.
- if(empty($subtable['pdoTools']['class']))
- Доработка filter having.
- Правка ace_editor.

1.11.4-alpha
- Адаптация под modx3(3.0.1) и pdoTools3.
- Навигация по таблице с CTRL и стрелочками.
- Инструкции autosave.refresh.row и autosave.refresh.form.
- select autocomplect не требует field_content.
- Инструкция table subs. В подтаблицы можно табы.
- Инструкция tabs[tab].tables. В таб можно поместить несколько талиц.
- Исправление ошибок grtTree.
- Чистка предупреждений php.
- Исправлено readonly для number и decimal.
- Доработана функция getTables->calc_excel_formula.
- Отключен автокомплект браузера.
- Поле в таблице поверх при фокусе.
- decimal инструкция step.
- Исправлена инструкция prepareRows.
- Исправлен фильтр autocomplect.
- Копирование в getTree.
- правка cells-selection.
- Трехуровневое subtables.
- Фильтр пустых дат.
- limit в autocomplect.
- Фильтр по умолчанию 0 для чекбокса.
- Лог для json конфига.
- Добавить пагинацию внизу таблицы.
- Инструкция edit.type.content выгрузка в excel поля заданные контентом.
- Исправление parent в tree.
- Исправление расчет excel формул.
- Исправение предупреждений php.
- Отключение автозаполнения Chrome.
- Исправление sub.tabs.tables.

1.11.3-alpha
- Добавлено событие getTablesLoadGTSConfig для изменения gts-конфига, когда нельзя редактировать исходник.
- Select autocomplect - инструкция content_name.
- Добавлена инструкция edit['refresh_table'].
- Доработки getTree.
- Select autocomplect - инструкция treeOn включает для автокомплект дерево в dropdown nemu. Настройки rootIds, where_parent, where_active[, parentIdField, idField].
- Инструкции prepareRow, prepareRows для table.
- Исправлены предупреждения php.


1.11.2-alpha